--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,8 @@
 FROM debian:latest
+MAINTAINER tintin@gnali.org
 
-apt update
-
-
+COPY sources.list /etc/apt/sources.list
+RUN apt-get -qq update && \
+    DEBIAN_FRONTEND=noninteractive apt-get -qq -y install binfmt-support qemu qemu-user-static debootstrap kpartx lvm2 dosfstools apt-cacher-ng  parted
 
 
